--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -118,7 +118,7 @@
                         X2K Web is an online tool used to infer upstream regulatory
                         networks from differentially expressed genes. Combining the <a
                             href="http://amp.pharm.mssm.edu/Enrichr">ChEA</a>, Genes2Networks,
-                        and <a href="http://www.maayanlab.net/KEA2/">KEA</a> apps
+                        and <a href="http://amp.pharm.mssm.edu/Enrichr">KEA</a> apps
                         together, X2K Web produces inferred networks of transcription
                         factors, proteins, and kinases which take part in the upstream
                         regulation of the inputted gene list. X2K web also allows users to
@@ -133,15 +133,17 @@
                         <div class="row">
                             <div class="col-sm-6 my-2">
                                 <label for="genelist">Gene list (<a href="javascript:void(0)"
-                                                                    onclick="insertExample(); geneCount();"
+                                                                    onclick="insertExample();"
                                                                     id="example-link">insert
                                     an example</a>)</label>
                                 <textarea class="form-control form-control-sm" id="genelist" rows="12"
-                                          name="text-genes" onkeyup="geneCount();" onchange="geneCount();" onfocus="geneCount();"></textarea>
-                                          <span id="gene-count"></span>
+                                          name="text-genes"></textarea>
+                                          <span id="gene-count" style="color: darkgrey; font-size: 0.9rem;"></span>
+                                          <br/>
+                                          <span id="warning" style="color: coral; font-size: 0.8rem;"></span>
                                 <!--Buttons-->
                                 <div class="my-3">
-                                    <button type="submit" class="btn btn-outline-primary btn-sm" id="results_submit">
+                                    <button type="submit" class="btn btn-outline-primary btn-sm" id="results_submit" disabled>
                                         Submit
                                     </button>
                                 </div>
