--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -424,7 +424,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_BioGRID"
                                                                                            value="true" checked>
-                                                                                    BioGRID
+                                                                                    BioGRID 2017
                                                                                 </label>
                                                                             </div>
                                                                             <div class="form-check">
@@ -442,7 +442,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_DIP"
                                                                                            value="true" checked>
-                                                                                    DIP
+                                                                                    DIP 2017
                                                                                 </label>
                                                                             </div>
                                                                         </div>
@@ -453,7 +453,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_huMAP"
                                                                                            value="true" checked>
-                                                                                    huMAP
+                                                                                    huMAP 2017
                                                                                 </label>
                                                                             </div>
                                                                             <div class="form-check">
@@ -462,7 +462,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_InnateDB"
                                                                                            value="true" checked>
-                                                                                    InnateDB
+                                                                                    InnateDB 2017
                                                                                 </label>
                                                                             </div>
                                                                             <div class="form-check">
@@ -471,7 +471,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_IntAct"
                                                                                            value="true" checked>
-                                                                                    IntAct
+                                                                                    IntAct 2017
                                                                                 </label>
                                                                             </div>
                                                                             <div class="form-check">
@@ -491,7 +491,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_MINT"
                                                                                            value="true" checked>
-                                                                                    MINT
+                                                                                    MINT 2017
                                                                                 </label>
                                                                             </div>
                                                                             <div class="form-check">
@@ -509,7 +509,7 @@
                                                                                            type="checkbox"
                                                                                            name="enable_SNAVI"
                                                                                            value="true" checked>
-                                                                                    SNAVI
+                                                                                    SNAVI 2017
                                                                                 </label>
                                                                             </div>
                                                                         </div>
@@ -1980,36 +1980,36 @@ C1d' \
                                     <td>756</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/BioGrid.sig">BioGrid</a></td>
-                                    <td>111,718</td>
+                                    <td><a href="datasets/BioGRID_2017.sig">BioGrid 2017</a></td>
+                                    <td>61,387</td>
                                 </tr>
                                 <tr>
                                     <td><a href="datasets/BioPlex.sig">BioPlex</a></td>
                                     <td>56,553</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/DIP.sig">DIP</a></td>
-                                    <td>14,635</td>
+                                    <td><a href="datasets/DIP_2017.sig">DIP 2017</a></td>
+                                    <td>3,909</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/huMAP.sig">huMAP</a></td>
+                                    <td><a href="datasets/huMAP.sig">huMAP 2017</a></td>
                                     <td>62,214</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/innateDB.sig">innateDB</a></td>
-                                    <td>20,388</td>
+                                    <td><a href="datasets/innateDB_2017.sig">innateDB 2017</a></td>
+                                    <td>5,415</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/IntAct.sig">IntAct</a></td>
-                                    <td>8,146</td>
+                                    <td><a href="datasets/IntAct_2017.sig">IntAct 2017</a></td>
+                                    <td>14,770</td>
                                 </tr>
                                 <tr>
                                     <td><a href="datasets/KEGG.sig">KEGG</a></td>
                                     <td>13,993</td>
                                 </tr>
                                 <tr>
-                                    <td><a href="datasets/MINT.sig">MINT</a></td>
-                                    <td>32,629</td>
+                                    <td><a href="datasets/MINT_2017.sig">MINT 2017</a></td>
+                                    <td>6,394</td>
                                 </tr>
                                 <tr>
                                     <td><a href="datasets/ppid.sig">ppid</a></td>
@@ -2017,7 +2017,7 @@ C1d' \
                                 </tr>
                                 <tr>
                                     <td><a href="datasets/SNAVI.sig">SNAVI</a></td>
-                                    <td>2,007</td>
+                                    <td>1,448</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -2068,7 +2068,7 @@ C1d' \
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td><a href="datasets/KEA.zip">KEA 2015</a></td>
+                                    <td><a href="datasets/KEA_2017.zip">KEA 2017</a></td>
                                     <td>11,420</td>
                                 </tr>
                                 </tbody>
