--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -512,6 +512,15 @@
                                                                                     SNAVI 2017
                                                                                 </label>
                                                                             </div>
+                                                                            <div class="form-check">
+                                                                                <label class="form-check-label">
+                                                                                    <input class="form-check-input"
+                                                                                           type="checkbox"
+                                                                                           name="enable_iREF"
+                                                                                           value="true" checked>
+                                                                                    iREF 2017
+                                                                                </label>
+                                                                            </div>                                                                            
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -1995,6 +2004,10 @@ C1d' \
                                     <td><a href="datasets/huMAP.sig">huMAP 2017</a></td>
                                     <td>62,214</td>
                                 </tr>
+                                <tr>
+                                    <td><a href="datasets/iREF.sig">iREF 2017</a></td>
+                                    <td>424,104</td>
+                                </tr>                                
                                 <tr>
                                     <td><a href="datasets/innateDB_2017.sig">innateDB 2017</a></td>
                                     <td>5,415</td>
