G2N propagation fix. Networks fix.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -517,7 +517,7 @@
                                                                                     <input class="form-check-input"
                                                                                            type="checkbox"
                                                                                            name="enable_iREF"
-                                                                                           value="true" checked>
+                                                                                           value="false">
                                                                                     iREF 2017
                                                                                 </label>
                                                                             </div>                                                                            
