Added cytoscape button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -806,6 +806,9 @@
                                 <a id="exportData">
                                     <button type="button" class="btn btn-outline-primary svg-button">SVG</button>
                                 </a>
+                                <a id="cytoscape-anchor">
+                                    <button type="button" class="btn btn-outline-primary cytoscape-button">Cytoscape</button>
+                                </a>
                             </div>
                         </div>
                     </div>
