Finalized PNG Button

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,6 +54,7 @@
     <script src="js/network.js"></script>
     <script src="js/index.js"></script>
     <script src="js/ljp.js"></script>
+    <script src="js/saveSvgAsPng.js"></script>
 
     <!--GA-->
     <script>
@@ -805,6 +806,9 @@
                                 </a>
                                 <a id="exportData">
                                     <button type="button" class="btn btn-outline-primary svg-button">SVG</button>
+                                </a>
+                                <a id="png-anchor">
+                                    <button type="button" class="btn btn-outline-primary png-button">PNG</button>
                                 </a>
                                 <a id="cytoscape-anchor">
                                     <button type="button" class="btn btn-outline-primary cytoscape-button">Cytoscape</button>
